# SSKTS-343 - OAuthService追加。 - エラーレスポンスの種類補強
